2013-04-05  Mats Erik Andersson <gnu@gisladisker.se>

	* doc/Makefile.am (AM_MAKEINFOHTMLFLAGS): Add $(srcdir)
	to `--css-include'.

2013-04-03  Simon Josefsson <simon@josefsson.org>

	* NEWS: Version 1.0.2.

2013-04-03  Simon Josefsson <simon@josefsson.org>

	* cfg.mk: Copy devhelp2 file.

2013-04-03  Simon Josefsson <simon@josefsson.org>

	* configure.ac: Drop AC_COPYRIGHT, it is just one more place to keep
	updated.

2013-04-03  Simon Josefsson <simon@josefsson.org>

	* Makefile.am, NEWS, README, README-alpha, asn1/Makefile.am,
	asn1/README, asn1/coding.c, asn1/decoding.c, asn1/element.c,
	asn1/element.h, asn1/errors.c, asn1/errors.h, asn1/gstr.c,
	asn1/gstr.h, asn1/int.h, asn1/libtasn1.h, asn1/parser_aux.c,
	asn1/parser_aux.h, asn1/structure.c, asn1/structure.h,
	asn1/version.c, configure.ac: Drop internal minitasn1 copy.

2013-04-03  Simon Josefsson <simon@josefsson.org>

	* extra/pam_shishi/Makefile.am: Add libtool -shared when building
	pam_shishi.  Suggested by Russ Allbery <rra@stanford.edu>.

2013-04-03  Simon Josefsson <simon@josefsson.org>

	* doc/Makefile.am: Generated.

2012-08-22  Mats Erik Andersson <gnu@gisladisker.se>

	* configure.ac, lib/resolv.c: Locate res_query and libresolv.  For portability res_query must be searched in libc, and in
	libresolv. The latter need not even exist on systems such as BSD.  Signed-off-by: Simon Josefsson <simon@josefsson.org>

2013-04-03  Simon Josefsson <simon@josefsson.org>

	* .gitignore: Ignore more.

2012-10-26  Mats Erik Andersson <gnu@gisladisker.se>

	* lib/principal.c, lib/tkts.c: Documentation update.  Signed-off-by: Simon Josefsson <simon@josefsson.org>

2012-10-05  Mats Erik Andersson <gnu@gisladisker.se>

	* examples/Makefile.am, extra/pam_shishi/Makefile.am,
	extra/rsh-redone/Makefile.am: Inclusion paths for out-of-tree.  Signed-off-by: Simon Josefsson <simon@josefsson.org>

2013-04-03  Simon Josefsson <simon@josefsson.org>

	* lib/asn1.c: Don't use deprecated libtasn1 features.
